# medisolveai-be-assignment

assignment_2/: 난수 생성 함수 구현.py
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  피부과 예약 시스템 더미 데이터 삽입용 쿼리문.sql
backend/alembic/: env.py
backend/alembic/versions/: 2bcea009cc8c_delete_table.py  744702c1c887_change_table.py  c54ff86d9096_add_contraint.py
backend/app/: main.py
backend/app/admin/: main.py  router.py
backend/app/admin/appointment/: repository.py  router.py  schema.py  service.py
backend/app/admin/doctor/: repository.py  router.py  schema.py  service.py
backend/app/admin/hospital_slot/: repository.py  router.py  schema.py  service.py
backend/app/admin/statistics/: repository.py  router.py  schema.py  service.py
backend/app/admin/treatment/: repository.py  router.py  schema.py  service.py
backend/app/common/: config.py  database.py  models.py
backend/app/gateway/: main.py
backend/app/patient/: main.py  repository.py  router.py  schema.py  service.py
backend/tests/: conftest.py
backend/tests/admin/: test_doctor.py
backend/tests/paient/: test_available_time.py  test_doctors.py  test_my_reservation.py  test_reservation_cancel.py  test_reservation_create.py
